
2. Changelog
------------
This is a non-exhaustive (but still near complete) changelog for
the java-lattices project, including alpha and beta versions.
Our thanks to all those people who've contributed bug reports and
code fixes.

Legend:

~ -> Security Fix
# -> Issue Fix
$ -> Language fix or change
+ -> Addition
^ -> Change
- -> Removed
! -> Note

2014-03-07 Christophe Demko <chdemko@gmail.com>
	* .travis.yml
	* doc/
	* build.xml
	* utility/initiate-publish.sh
		+ Add contribute page
		^ Move javadoc overview in doc/api folder

2014-03-07 Christophe Demko <chdemko@gmail.com>
	* test/dgraph/NodeTest.java
		+ Complete unit test

2014-03-05 Jean-François Viaud <jviaud@univ-lr.fr>
	* build.xml
	* src/lattice/Concept.java
	* test/lattice/ConceptTest.java
		+ Checkstyle, test on Concept

2014-03-04 Christophe Demko <chdemko@gmail.com>
	* build.xml
	* src/lattice/ComparableSet.java
	* test/lattice/ComparableSetTest.java
		+ Checkstyle, uml and test on ComparableSet

2014-03-04 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DAGraph.iuml
	* src/dgraph/DAGraph.java
	* src/dgraph/DGraph.iuml
	* src/dgraph/DGraph.java
	* src/dgraph/Edge.iuml
	* src/dgraph/Edge.java
	* src/dgraph/Node.java
	* src/lattice/BijectiveComponents.iuml
	* src/lattice/BijectiveComponents.java
	* src/lattice/Lattice.iuml
	* src/lattice/Lattice.java
	* src/lattice/Rule.java
		^ Reorganize uml

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* cite.bib
		^ Move file to doc folder

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Rule.iuml
		^ Change method category

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* src/lattice/Rule.java
	* src/lattice/Rule.iuml
		+ Add uml description for Rule

2014-03-02 Christophe Demko <chdemko@gmail.com>
	* src/dgraph/DAGraph.java
	* src/dgraph/DGraph.java
	* src/dgraph/Edge.java
	* src/dgraph/Node.java
	* src/lattice/BijectiveComponents.java
	* src/lattice/Lattice.java
		^ Describe uml in separate files
