@@ -8,6 +8,7 @@ if [ "$TRAVIS_REPO_SLUG" == "kbertet/java-lattices" ] && [ "$TRAVIS_JDK_VERSION"
   cp -R build/reports/html $HOME/reports-latest
   cp -R build/coverage $HOME/coverage-latest
   cp -R build/contribute $HOME/contribute-latest
+  cp build/tutorial/tutorial-java-lattices.pdf $HOME/tutorial-java-lattices.pdf
 
   cd $HOME
   git config --global user.email "travis@travis-ci.org"
@@ -23,6 +24,7 @@ if [ "$TRAVIS_REPO_SLUG" == "kbertet/java-lattices" ] && [ "$TRAVIS_JDK_VERSION"
   cp -Rf $HOME/reports-latest ./test
   cp -Rf $HOME/coverage-latest ./coverage
   cp -Rf $HOME/contribute-latest ./contribute
+  cp $HOME/tutorial-java-lattices.pdf .
   git add -f .
   git commit -m "Latest doc on successful travis build $TRAVIS_BUILD_NUMBER auto-pushed to gh-pages"
   git push -fq origin gh-pages > /dev/null
